--- a/client/src/styles/styles.css
+++ b/client/src/styles/styles.css
@@ -1,3 +1,21 @@
 .brand-logo .material-icons {
-  font-size: 36px;
+}
+
+.brand-logo .material-icons.cloudy {
+  font-size: 50px;
+  margin-right: 5px;
+}
+
+.brand-logo .material-icons.sunshine {
+  font-size: 40px;
+}
+
+.app-header .account {
+  display: inline-block;
+}
+
+footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
 }
