--- a/client/src/styles/sidebar.css
+++ b/client/src/styles/sidebar.css
@@ -41,3 +41,19 @@
   font-size: 13px;
   padding-left: 15px;
 }
+
+.sidebar .draggable {
+  position: relative;
+}
+
+.sidebar .draggable .handle {
+  position: absolute;
+  right: 5px;
+  top: 50px;
+  z-index: 10;
+  color: white;
+}
+
+.sidebar .draggable .handle:hover {
+  cursor: move;
+}
