adjust draggable city cards styling

--- a/client/src/styles/sidebar.css
+++ b/client/src/styles/sidebar.css
@@ -1,3 +1,7 @@
+.sidebar .card {
+  margin: 0;
+}
+
 .sidebar .card .card-content {
   padding: 5px 10px;
 }
@@ -44,6 +48,7 @@
 
 .sidebar .draggable {
   position: relative;
+  margin: 0 0 15px 0;
 }
 
 .sidebar .draggable .handle {
